link article to youtube

--- a/templates/base.html
+++ b/templates/base.html
@@ -68,7 +68,13 @@
 {% block content %}
 
 {% endblock %}
-
+ {% comment %}<footer class="footer">
+    <div class="container">
+      <p>Sticky footer content</p>
+    </div>
+  </footer>{% endcomment %}
+<
+<div class = "footer"></div>
 </body>
 <!-- Footer -->
 {% comment %}<footer class="" style="background-color: lightgrey">
