--- a/templates/mainsite/home.html
+++ b/templates/mainsite/home.html
@@ -86,10 +86,10 @@
            <div class="col-md-1"></div>
               <div class="col-md-3  col-md-3 col-md-offset-1 ">
                   <div class="imgBox">
-                   <img src="{% static 'img/women11.jpg' %}">
+                   <img src="{% static 'img/munda.jpg' %}" >
                 </div>
                 <div class="memberdetails">
-                    <h3>TATENDA BROWN<br><span>CEO and Founder</span></h3>
+                    <h3>JOSEPH MUNDA<br><span>Coordinator / Journalist</span></h3>
                     <ul>
                         <li><a href="https://www.facebook.com/womensvoicezimbabwe/" class="nav-link"><i class="fa fa-facebook-square"style="font-size:20px;color: #4267B2;"></i></a></li>
                         <li><a href="https://www.instagram.com/womensvoicezw/" class="nav-link"><i class="fa fa-linkedin-square"style="font-size:20px;color:#405DE6 ;"></i></a></li>
@@ -99,10 +99,10 @@
             </div>
               <div class="col-md-3 col-md-offset-1 " style="text-align: center">
                 <div class="imgBox">
-                   <img src="{% static 'img/women6.jpeg' %}">
+                   <img src="{% static 'img/nicole.jpg' %}">
                 </div>
                 <div class="memberdetails">
-                    <h3>RUVIMBO MOYO<br><span>CEO and Founder</span></h3>
+                    <h3>NICOLE KUREBWASEKA<br><span>PHOTOGRAPHER / JOURNALIST</span></h3>
                     <ul>
                         <li><a href="https://www.facebook.com/womensvoicezimbabwe/" class="nav-link"><i class="fa fa-facebook-square"style="font-size:20px;color: #4267B2;"></i></a></li>
                         <li><a href="https://www.instagram.com/womensvoicezw/" class="nav-link"><i class="fa fa-linkedin-square"style="font-size:20px;color:#405DE6 ;"></i></a></li>
@@ -115,10 +115,10 @@
        <div class="row">
             <div class="col-md-3 ">
                 <div class="imgBox">
-                   <img src="{% static 'gallery/woman7.jpeg' %}">
+                   <img src="{% static 'img/rose.jpg' %}">
                 </div>
                 <div class="memberdetails">
-                    <h3>NOKUTHABA LUNGA<br><span>CEO and Founder</span></h3>
+                    <h3>ROSEMARY GWANDU<br><span> VIDEO PRODUCER / JOURNALIST</span></h3>
                     <ul>
                         <li><a href="https://www.facebook.com/womensvoicezimbabwe/" class="nav-link"><i class="fa fa-facebook-square"style="font-size:20px;color: #4267B2;"></i></a></li>
                         <li><a href="https://www.instagram.com/womensvoicezw/" class="nav-link"><i class="fa fa-linkedin-square"style="font-size:20px;color:#405DE6 ;"></i></a></li>
@@ -128,10 +128,10 @@
             </div>
               <div class="col-md-3  col-md-3 col-md-offset-1 ">
                  <div class="imgBox">
-                   <img src="{% static 'gallery/women13.jpeg' %}">
+                   <img src="{% static 'img/ashley.jpg' %}">
                 </div>
                 <div class="memberdetails">
-                    <h3>TINASHE GUMBO<br><span>CEO and Founder</span></h3>
+                    <h3>ASHLEY MUREMBA<br><span>SOCIAL MEDIA SPECIALIST / JOURNALIST</span></h3>
                     <ul>
                         <li><a href="https://www.facebook.com/womensvoicezimbabwe/" class="nav-link"><i class="fa fa-facebook-square"style="font-size:20px;color: #4267B2;"></i></a></li>
                         <li><a href="https://www.instagram.com/womensvoicezw/" class="nav-link"><i class="fa fa-linkedin-square"style="font-size:20px;color:#405DE6 ;"></i></a></li>
