--- a/templates/mainsite/newsbycategory.html
+++ b/templates/mainsite/newsbycategory.html
@@ -5,7 +5,7 @@
 <br>
     <br>
     <br>
-     <h1 class="second" style="font-weight: 700"> Trending</h1>
+     <h1 class="second" style="font-weight: 700"> Trending </h1>
     <hr>
     <div class="container-fluid" style="height:  70vh;  padding-bottom: 2px">
 
@@ -186,7 +186,7 @@
                 <i class="fa calendar" style="color: black">Mar 11 , 2019</i>
                 <p class="preview-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it</p>
 
-                  <a href="#" class="btn btn-default btn-lg btn-get-in-touch" style="text-align: center" >Read more</a>
+                    <a href="{% url 'article' pk=article.pk %}" class="btn btn-default btn-lg btn-get-in-touch">Read more</a>
 
             </div>
         </div></li>
@@ -197,12 +197,6 @@
 
         </div>
          <div class="sidebar">
-     {% comment %}   <div  class="section search">
-            <h2 class="section-title"> Search</h2>
-            <form action="#" method="post">
-                <input type="text" name="search-term" class="text-input" placeholder="Search.....">
-            </form>
-        </div>{% endcomment %}
         <div class="section topics">
             <h3>Categories</h3>
             <ul>
